2014-02-19  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-state-put): Allow WINDOW to refer to an
	internal window (Bug#16793).

2014-02-19  Glenn Morris  <rgm@gnu.org>

	* textmodes/remember.el: Move provide statement to end.
	(remember-mode-map, remember-notes-mode-map, remember-notes-mode)
	(remember-notes): Doc fixes.

2014-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* delsel.el (delete-char): Restore incorrectly erased property
	(bug#16795).

2014-02-18  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset--restore-frame): When a frame is being reused
	and its root window is not alive, delete all the frame's windows before
	restoring the window state.  This works around the issue in bug#16793.

2014-02-18  Glenn Morris  <rgm@gnu.org>

	* textmodes/remember.el (remember-data-directory)
	(remember-directory-file-name-format, remember-store-in-files)
	(remember-notes-initial-major-mode, remember-notes-bury-on-kill)
	(remember-notes-save-and-bury-buffer)
	(remember-notes--kill-buffer-query): Doc fixes.

	* desktop.el (desktop-save-mode, desktop-auto-save-timeout): Doc fixes.

2014-02-17  Alan Mackenzie  <acm@muc.de>

	Connect electric-indent-mode up with CC Mode.  Bug #15478.
	* progmodes/cc-mode.el (c-initialize-cc-mode): Add CC Mode hooks
	to electric-indent-{,local-}-mode.
	(c-basic-common-init): Set electric-indent-inhibit.
	Initialise c-electric-flag from electric-indent-mode.
	(c-electric-indent-mode-hook, c-electric-indent-local-mode-hook):
	New hook functions which propagate electric-indent-mode to CC mode.

	* progmodes/cc-cmds.el (c-toggle-electric-state): When C-c C-l is
	hit, toggle electric-indent-local-mode.

	* electric.el (electric-indent-mode-has-been-called):
	New variable.

2014-02-17  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset-cfg-id): New function.
	(frameset--reuse-frame, frameset-restore): Use it.
	(frameset--jump-to-register): Try harder to reuse frames (bug#16748).
