@@ -1,3 +1,7 @@
+2014-02-19  Juanma Barranquero  <lekktu@gmail.com>
+
+	* frameset.el (frameset--reuse-frame): Remove workaround for bug#16793.
+
 2014-02-19  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (window-state-put): Allow WINDOW to refer to an
